# achi

./: .gitignore  Cargo.toml  README.md
achi/: Cargo.toml
achi/src/: error.rs  main.rs  program.rs
achi/src/api/: games.rs  keyvalue.rs  mod.rs
achi/src/components/: achievements.rs  library.rs  loading.rs  mod.rs
achi/src/models/: achievement.rs  game.rs  mod.rs
achi/src/states/: mod.rs  steam.rs
interfaces/: Cargo.toml
interfaces/src/: apps.rs  constants.rs  error.rs  lib.rs  steam.rs  user.rs  userstats.rs  worker.rs
interfaces/src/callbacks/: mod.rs  user_stats_received.rs
interfaces/src/native/: mod.rs  steam_apps001.rs  steam_apps008.rs  steam_client.rs  steam_user.rs  steam_userstats.rs
src/: error.rs  games.rs  http_client.rs  keyvalue.rs  main.rs  program.rs  steam.rs
src/api/: games.rs  keyvalue.rs  mod.rs  steam.rs
src/api/interfaces/: apps.rs  client.rs  interface.rs  user.rs  userstats.rs
src/api/interfaces/native/: steam_apps001.rs  steam_apps008.rs  steam_client.rs  steam_user.rs  steam_userstats.rs
src/components/: achievements.rs  games.rs  library.rs  mod.rs  owned_games.rs
src/interfaces/: apps.rs  client.rs  interface.rs  mod.rs  user.rs  userstats.rs  wrapper.rs
src/interfaces/native/: mod.rs  steam_apps001.rs  steam_apps008.rs  steam_client.rs  steam_user.rs  steam_userstats.rs
src/models/: achievement.rs  achievements.rs  game.rs  mod.rs
src/wrappers/: client.rs  mod.rs  user.rs
