[package]
name = "achi"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
env_logger = "0.11.9"
log = "0.4.29"
reqwest = { version = "0.13.2", features = ["blocking"] }
serde = { version = "1.0.228", features = ["derive"] }
serde-xml-rs = "0.8.2"
thiserror = "2.0.18"
windows = { version = "0.62.2", features = ["Win32_System_LibraryLoader"] }
winreg = "0.55.0"
