[workspace]
resolver = "3"
members = ["achi","interfaces"]

# [package]
# name = "achi"
# version = "0.1.0"
# edition = "2024"

# [dependencies]
# anyhow = "1.0.102"
# env_logger = "0.11.9"
# gpui = "0.2.2"
# gpui-component = "0.5.1"
# gpui-component-assets = "0.5.1"
# log = "0.4.29"
# serde = { version = "1.0.228", features = ["derive"] }
# serde-xml-rs = "0.8.2"
# thiserror = "2.0.18"
# windows = { version = "0.62.2", features = ["Win32_System_LibraryLoader"] }
# winreg = "0.55.0"

# tokio = { version = "1.50.0", features = ["rt-multi-thread"] }
# reqwest = { version = "0.13.2", features = ["blocking", "multipart", "stream"] }
# http = "1.4.0"
# bytes = "1.11.1"
# futures = "0.3.32"
# smol = "2.0.2"
# serde_json = "1.0.149"
